# rental-website-borkum

./: .gitignore  README.md  borkum.py  config.py  pyproject.toml  requirements.txt  setup.py  uwsgi.ini
borkum/: __init__.py  __main__.py
borkum/website/: __init__.py
borkum/website/assets/css/: map.css
borkum/website/blueprints/: __init__.py  admin.py  apartment.py  gallery.py  home.py  image_service.py  legal_information.py  location.py  picture_service.py  rental_object.py  seo.py
borkum/website/blueprints/utils/: __init__.py  forms.py
borkum/website/database/: db_service.py  db_utils.py  models.py
borkum/website/static/content/: apartments.json
borkum/website/static/css/: apartment-gallery.css  gallery.css
borkum/website/static/js/: lazyload.js
borkum/website/templates/: apartment.html  base.html  gallery.html  impressum.html  index.html  location.html  privacy.html  rental_object.html  terms_of_use.html  test.html
borkum/website/templates/admin/: apartment_form.html  apartment_overview.html  apartments.html  flat_form.html  flat_image_form.html  flat_overview.html  house_form.html  house_overview.html  image_form_add.html  image_form_update.html  image_overview.html  index.html
borkum/website/templates/appartments/: appartment.html
scripts/: db_objects.json  db_objects.yaml  flats.py  get.py  images.py  seed.py  set.py
