[tool.poetry]
name = "borkum-website"
version = "0.1.0"
description = ""
authors = ["Johannes Scheibe <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pillow = "^9.3.0"
pathlib = "^1.0.1"
flask-wtf = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
